website/src/css/pages/_cloud-beta.scss
.cloud-beta-page {
    h1.title {
        font-weight: bold;
        font-size: 3rem;
        line-height: 3.75rem;
        margin-bottom: 30px;

        /* Mobile */
        @media only screen and (max-width: 768px) {
            font-size: 2.25rem;
            line-height: 2.825rem;
        }
    }

    .subTitle {
        font-weight: bold;
        font-size: 1.5rem;
        line-height: 1.875rem;
        margin-bottom: 10px;

        /* Mobile */
        @media only screen and (max-width: 768px) {
            font-size: 1.15rem;
            line-height: 1.375rem;
        }
    }

    p {
        font-weight: 400;
        font-size: 1.125rem;
        line-height: 1.75rem;
        margin-bottom: 0;

        /* Mobile */
        @media only screen and (max-width: 768px) {
            font-size: 1rem;
            line-height: 1.625rem;
        }
    }
    .cloud-beta-page__hero-and-header {
        .btn {
            margin-top: 30px;
        }
    }

    ul {
        list-style-position: inside;
    }

    li {
        font-size: 0.875rem;

        /* Mobile */
        @media only screen and (max-width: 768px) {
            line-height: 1.5rem;
        }
    }

    .join-the-waitlist {
        margin-top: 170px;
    }

    ul {
        list-style-position: inside;
    }

    li {
        font-size: 0.875rem;

        /* Mobile */
        @media only screen and (max-width: 768px) {
            line-height: 1.5rem;
        }
    }

    .custom-carousel {
        padding: 16rem 0;

        /* Mobile */
        @media only screen and (max-width: 768px) {
            padding: 6rem;
        }

        li {
            font-size: 1.5rem;
            line-height: 1.4rem;
        }

        h1 {
            font-size: 4rem;
            line-height: 5rem;

            /* Mobile */
            @media only screen and (max-width: 768px) {
                font-size: 2.25rem;
                line-height: 2.8rem;
            }
        }

        p {
            font-size: 1.125em;
            line-height: 1.75rem;
        }
    }
}

